fixed shifting components

--- a/frontend/src/GroupProfilePage/IndividualComparisons/IndividualComparisons.css
+++ b/frontend/src/GroupProfilePage/IndividualComparisons/IndividualComparisons.css
@@ -15,7 +15,7 @@
     width: fit-content;
 }
 
-.my-insights .d-flex {
+.my-insights .heading {
     margin-bottom: 5px;
     width: fit-content;
 }
@@ -54,17 +54,20 @@
     cursor: pointer;
     color: var(--off-white-color);
 }
-.comparisons .d-flex {
+.comparisons .heading {
     margin-bottom: 5px;
     align-items: center;
-    width: fit-content;
+    width: 400px;
 }
-
 .no-common-message h3{
     font-size: clamp(11px, 2vw, 13px);
     color: var(--blue-color-1);
+    width: min(40vw, 800px);
+    margin-right: 5px;
+    padding-right: 10px;
     margin-left: 6px;
 }
+
 /* css for top artists section */
 
 .top-artists {
